feat: project, perspective schema update and getAllCarrosselOrder
