# backend/src/dtos/carousel.dto.ts
@@ -1,0 +1,9 @@
+export interface CarrosselResponseType {
+  _id: string;
+  title: string;
+  collection_type: "project" | "perspective";
+  banner?: string;
+  isCarrossel?: boolean;
+  orderCarrossel?: number;
+  extraURL?: string;
+}
