# backend/src/zod/schemas/project.schema.ts
@@ -1,13 +1,16 @@
-import { z } from 'zod';
+import { z } from "zod";
 
-const objectIdSchema = z.string().regex(/^[0-9a-fA-F]{24}$/, 'Invalid ID');
+const objectIdSchema = z.string().regex(/^[0-9a-fA-F]{24}$/, "Invalid ID");
 const projectBodyBaseSchema = z.object({
-  project_title: z.string().min(1, { message: 'O título é obrigatório' }),
-  project_subtitle: z.string().optional(),
-  project_slug: z.string().min(1, { message: 'O slug é obrigatório' }).regex(/^[a-z0-9-]+$/),
-  project_about_html: z.string().optional(),
-  project_team: z.array(objectIdSchema).optional(),
-  project_status: z.enum(['draft', 'published']).optional(),
+  title: z.string().min(1, { message: "O título é obrigatório" }),
+  subtitle: z.string().optional(),
+  slug: z
+    .string()
+    .min(1, { message: "O slug é obrigatório" })
+    .regex(/^[a-z0-9-]+$/),
+  about_html: z.string().optional(),
+  team: z.array(objectIdSchema).optional(),
+  status: z.enum(["draft", "published"]).optional(),
   isCarrossel: z.boolean().optional(),
   orderCarrossel: z.number().optional(),
   banner: z.string().url({ message: "URL do banner inválida" }).optional(),
